--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,19 @@
 .DS_Store
 .DS_Store
 .DS_Store
+.DS_Store
+export/.DS_Store
+matlab/.DS_Store
+reconstruction/.DS_Store
+reconstruction/CSreco_mat/.DS_Store
+reconstruction/CSreco_mat/Wavelab850/.DS_Store
+reconstruction/CSreco_mat/Wavelab850/Books/WaveTour/.DS_Store
+reconstruction/CSreco_mat/Wavelab850/Browsers/.DS_Store
+reconstruction/CSreco_mat/Wavelab850/Browsers/One-D/.DS_Store
+reconstruction/CSreco_mat/Wavelab850/Papers/.DS_Store
+reconstruction/CSreco_mat/Wavelab850/Papers/Adapt/.ds_store
+reconstruction/CSreco_mat/Wavelab850/Papers/Blocky/.DS_Store
+reconstruction/CSreco_mat/Wavelab850/Papers/Correl/.DS_Store
+reconstruction/CSreco_mat/Wavelab850/Papers/MinEntSeg/.DS_Store
+reconstruction/CSreco_mat/Wavelab850/Papers/SpinCycle/.DS_Store
+reconstruction/CSreco_mat/Wavelab850/Papers/Tour/.DS_Store
